# shorthair

./: .build.yml  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  deploy-srht.sh  diesel.toml  entrypoint.sh  litestream.yml  run.sh  rust-toolchain.toml
.github/workflows/: ci.yml
.kamal/: secrets
config/: deploy.yml
crates/db/: Cargo.toml
crates/db/src/: ballot.rs  config.rs  draft_draw.rs  email.rs  group.rs  inst.rs  invite.rs  lib.rs  magic_link.rs  room.rs  schema.rs  spar.rs  user.rs
crates/email/: Cargo.toml
crates/email/src/: lib.rs
crates/fuzzcheck-util/: Cargo.toml
crates/fuzzcheck-util/src/: chrono_mutators.rs  lib.rs  useful_string_mutator.rs  usize_u64_mutator.rs
crates/main/: Cargo.toml
crates/main/src/: account.rs  accounts.rs  ballots.rs  basic_test_sequence.rs  compute_elo.rs  config_for_internals.rs  groups.rs  home_page.rs  html.rs  lib.rs  main.rs  permissions.rs  request_ids.rs  resources.rs  signup_for_spar.rs  slides.rs  util.rs
crates/main/src/admin/: config.rs  invite.rs  mod.rs  setup.rs
crates/main/src/auth/: change_password.rs  login.rs  logout.rs  mod.rs  profile.rs  register.rs
crates/main/src/model/: mod.rs  model.rs
crates/main/src/model/testcases/: 133da9856d5f9aef.json  3a8d3836ef6ec257.json  647fca9e700fa63b.json  79c3f1deefbd9d84.json  7e808986f57a4260.json  836b6abeca54d2ef.json  910f4f1edb988eb6.json  991cbb859b546307.json  9aca06d881c8f7d8.json  af03e2dfc3f943a9.json  cba213fd9f4e7bae.json  fcb62ab95e1ae2f9.json  ff13d114fc562004.json
crates/main/src/spar_allocation/: mod.rs  ratings.rs  results.rs  routes.rs  solve_allocation.rs
crates/main/src/spar_generation/: ballots.rs  basic_test_sequence.rs  config_for_internals.rs  mod.rs  signup_for_spar.rs  spar_series_routes.rs
crates/main/src/spar_generation/allocation_problem/: mod.rs  ratings.rs  results.rs  routes.rs  solve_allocation.rs
crates/main/src/spar_generation/individual_spars/: admin_overview.rs  admin_routes.rs  complete_spar.rs  mod.rs  participant_overview.rs  signup_routes.rs
crates/main/src/spar_generation/individual_spars/draw_management/: confirm_draft.rs  draft_management.rs  edit.rs  generate.rs  mod.rs  release.rs  util.rs
crates/main/src/spar_generation/spar_series/: admin_routes.rs  mod.rs
crates/main/src/tests/: mod.rs
crates/slides/: Cargo.toml
crates/slides/src/: break_slides.typst  lib.rs  typst_as_library.rs
crates/trace-request/: Cargo.toml
crates/trace-request/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
migrations/2024-11-14-022138_init/: down.sql  up.sql
migrations/2025-04-17-230542_make_user_email_unique/: down.sql  up.sql
migrations/2025-04-28-180834_make_user_username_unique/: down.sql  up.sql
migrations/2025-04-29-231157_make_spar_series_join_requests_unique/: down.sql  up.sql
migrations/2025-05-02-010712_draw_management/: down.sql  up.sql
migrations/2025-05-02-011237_partner_preferences/: down.sql  up.sql
migrations/2025-07-06-184854_invite_may_create_resources/: down.sql  up.sql
