[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
reqwest = "0.12.9"
tabbycat-api = { git = "https://git.sr.ht/~teymour/tabbycat-api", version = "0.1.0" }
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
diesel-async = { version = "0.5.2", features = ["async-connection-wrapper"] }

[dependencies.rocket]
version = "0.5.1"
features = ["secrets"]

[dependencies.rocket_sync_db_pools]
features = ["diesel_sqlite_pool"]
version = "0.1.0"

[dependencies.diesel]
features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
    "r2d2",
    "uuid",
]
version = "2.2.0"
