[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["arbitrary", "serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
reqwest = "0.12.9"
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
arbitrary = { version = "1.4.1", features = ["derive"] }
itertools = "0.14.0"
fuzzcheck = { git = "https://github.com/loiclec/fuzzcheck-rs" }
fuzzcheck-util = { path = "../fuzzcheck-util" }
regex = "1.11.1"
once_cell = "1.20.3"
diesel-tracing = { version = "0.3.1", features = [
    "sqlite",
    "r2d2",
    "statement-fields",
] }
tracing = "0.1.41"

[dependencies.rocket]
version = "0.5.1"
features = ["secrets"]

[dependencies.rocket_sync_db_pools]
features = ["diesel_sqlite_pool"]
version = "0.1.0"

[dependencies.diesel]
features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
    "r2d2",
    "uuid",
]
version = "2.2.0"
