[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.41", features = ["arbitrary", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = "0.12.22"
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
arbitrary = { version = "1.4.1", features = ["derive"] }
itertools = "0.14.0"
fuzzcheck = { git = "https://github.com/loiclec/fuzzcheck-rs" }
fuzzcheck-util = { path = "../fuzzcheck-util" }
regex = "1.11.1"
once_cell = "1.21.3"
diesel-tracing = { version = "0.3.1", features = [
    "sqlite",
    "r2d2",
    "statement-fields",
] }
tracing = "0.1.41"
chumsky = "0.10.1"

[dependencies.rocket]
version = "0.5.1"
features = ["secrets"]

[dependencies.rocket_sync_db_pools]
features = ["diesel_sqlite_pool"]
version = "0.1.0"

[dependencies.diesel]
features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
    "r2d2",
    "uuid",
]
version = "2.2.11"
