[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["uuid"] }
db = { path = "../db" }
email = { path = "../email" }
diesel = { version = "2.2.4", features = ["chrono", "r2d2"] }
uuid = { version = "1.11.0", features = ["v4", "v7"] }
maud = { version = "0.26.0", features = ["rocket"] }
url = "2.5.3"
addr = "0.15.6"
either = "1.13.0"
reqwest = "0.12.9"
qrcode = "0.14.1"
regex = "1.11.1"
serde_json = "1.0.133"
serde = { version = "1.0.217", features = ["derive"] }
argon2 = "0.5.3"
good_lp = { version = "1.13.0", default-features = false, features = ["highs"] }
lazy_static = "1.5.0"
arbitrary = { version = "1.4.1", features = ["derive"] }
once_cell = "1.20.2"
itertools = "0.14.0"
serde_urlencoded = "0.7.1"
diesel_migrations = "2.2.0"
tempfile = "3.17.1"
fuzzcheck = { git = "https://github.com/loiclec/fuzzcheck-rs" }
parking_lot = "0.12.3"
fuzzcheck-util = { version = "0.1.0", path = "../fuzzcheck-util" }
skillratings = "0.27.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sentry = "0.37.0"
sentry-tracing = "0.37.0"
tracing = "0.1.41"
opentelemetry = { version = "0.29.0" }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "tonic"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
opentelemetry-appender-tracing = "0.29.1"
tracing-opentelemetry = "0.30.0"
opentelemetry-semantic-conventions = { version = "0.29.0", features = [
    "semconv_experimental",
] }
opentelemetry-stdout = "0.29.0"

[dependencies.rocket_sync_db_pools]
features = ["diesel_sqlite_pool"]
version = "0.1.0"
