[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.11", features = ["chrono", "r2d2"] }
diesel_migrations = "2.2.0"
either = "1.15.0"
fuzzcheck = { git = "https://github.com/loiclec/fuzzcheck-rs" }
good_lp = { version = "1.14.0", default-features = false, features = ["highs"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
maud = { version = "0.27.0", features = ["rocket"] }
once_cell = "1.21.3"
opentelemetry = { version = "0.29.1" }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "tonic"] }
opentelemetry-semantic-conventions = { version = "0.29.0", features = [
    "semconv_experimental",
] }
opentelemetry-stdout = "0.29.0"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
parking_lot = "0.12.4"
qrcode = "0.14.1"
rand = "0.8.5"
regex = "1.11.1"
reqwest = "0.12.22"
rocket = { version = "0.5.1", features = ["uuid"] }
sentry = "0.37.0"
sentry-tracing = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
skillratings = "0.27.1"
tempfile = "3.20.0"
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4", "v7"] }
# local dependencies
fuzzcheck-util = { version = "0.1.0", path = "../fuzzcheck-util" }
db = { path = "../db" }
email = { path = "../email" }
ui = { version = "0.1.0", path = "../ui" }
slides = { path = "../slides" }
trace-request = { version = "0.1.0", path = "../trace-request" }

[dependencies.rocket_sync_db_pools]
features = ["diesel_sqlite_pool"]
version = "0.1.0"
