[package]
name = "slides"
version = "0.1.0"
edition = "2024"

[dependencies]
attohttpc = { version = "0.29.2", features = ["json"] }
db = { version = "0.1.0", path = "../db" }
maud = "0.27.0"
rocket = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tabbycat-api = { git = "https://git.sr.ht/~teymour/tabbycat-api/", version = "0.1.0" }
trace-request = { version = "0.1.0", path = "../trace-request" }
tracing = "0.1.41"
ui = { version = "0.1.0", path = "../ui" }
