[package]
name = "slides"
version = "0.1.0"
edition = "2024"

[dependencies]
attohttpc = { version = "0.29.2", features = ["json"] }
db = { version = "0.1.0", path = "../db" }
maud = "0.27.0"
rocket = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tabbycat-api = { git = "https://git.sr.ht/~teymour/tabbycat-api/", version = "0.1.0" }
trace-request = { version = "0.1.0", path = "../trace-request" }
tracing = "0.1.41"
ui = { version = "0.1.0", path = "../ui" }

# printing slides
typst = "0.13"
comemo = "0.4"

# Fetching and unzipping packages
zune-inflate = { version = "0.2", default-features = false, features = [
    "gzip",
    "std",
] }
tar = "0.4"
ureq = "2.12"

# utils
time = "0.3"
ttf-parser = "0.25"
typst-kit = "0.13.1"
typst-pdf = "0.13.1"
typst-svg = "0.13.1"
indexmap = "2.10.0"
reqwest = "0.12.22"
